	  (2013-12-11).
	* libc/misc/lib_match.c:  Pattern matching logic extended to handle
	  matches to sets of characters and ranges of character values.  From
	  Ken Pettit (2013-12-12).
	* fs/procfs, drivers/mtd, fs/smartfs, includes/nuttx/fs, .. to many
	  files to list:  Extensive changes by Ken Pettit to extend procfs/
	  functionality.  Includes some incomplete changes related to
	  SmartFS (2013-12-12).
	* configs/stm32f429i-disco: Add support for procfs/ MTD part names.
	  From Ken Pettit (2013-12-12)
	* arch/arm/src/a1x/chip/a1x_timer.h:  Timer register bit definitions
	  (incomplete on initial check-in) (2013-12-12).
	* lbc/time/lib_strftime.c: Need null-termination on the the string
	  generated by strftime().  From Max Holtzberg (2013-12-12).
	* sched/nanosleep.c and include/time.h:  Add nanosleep() (2013-12-12).
	* libc/unistd/lib_sleep.c and lib_usleep.c.  Move sleep() and
	  usleep() from sched/sleep.c and usleep.c to libc/unistd.  These
	  functions now just call nanosleep(). (2013-12-13).
	* syscall/ and include/sys/syscall.h:  Remove sleep and usleep
	  system calls.  Add nanosleep system call (2013-12-13).
	* arch/arm/src/a1x/a1x_timerisr.c:  Timer interrupt handler for the
	  A10 (2013-12-13).
	* arch/arm/src/a1x/a1x_config.h:  Header file to keep track of A10
	  configuration decisions (2013-12-13).
	* arch/arm/src/a1x/a1x_lowputc.c, a1x_serial.c, and a1x_serila.h:
	  Beginning of an A10 serial driver.  From Alan Carvalho de Assis
	  (2013-12-13).
	* fs/procfs/procfs_utils.c:  Move some re-usable functions out of
	  fs_procfsproc.c into a utility file (2013-12-14).
	* fs/procfs/fs_procfsuptime.c:  Supports /proc/uptime (2013-12-14).
	* graphics/nxconsole/nxcon_font.c:  Fix a typo that causes a compile
	  error when CONFIG_NXCONSOLE_BPP < 8.  From Librae (2013-12-15).
	* fs/procfs/fs_procfsproc.c:  procfs now shows information about
	  the group that each thread belongs:  Like parents, group member,
	  open file, and open sockets (2013-12-15).
